# Image-Matching

./: .gitignore  README.md  main.py
articles/: HPatch.skim  cvpr15-matchnet.skim
assets/: match_res.npz  match_res0.npz
libtorch-superpoint/: CMakeLists.txt  hello.cpp  hello.hpp  test.py
libtorch-superpoint/include/: superpoint.h  utils.h
libtorch-superpoint/src/: main.cpp  superpoint.cpp  utils.cpp
models/: matching.py  superglue.py  superpoint.py  test_superglue.py  test_superpoint.py  utils.py
test_transfer/: main.py
test_transfer/models/: matching.py  superglue.py  superpoint.py  transfer_net.py  utils.py
